# Secrethome2

./: .devcontainer.json  .gitignore  LICENCE.md  biome.json  compose.dev.yaml  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-test.yml
backend/: Cargo.toml  go.mod  main.go
backend/src/: error.rs  filehash.rs  upload_thumbnail.rs  upload_video.rs
backend/video/: processor.go
backend_actix/: Cargo.toml
backend_actix/src/: config.rs  main.rs  middleware.rs  upload_thumbnail.rs  upload_video.rs
dockerfiles/dev/: Dockerfile
main/: .env.development  .env.production  .gitignore  drizzle.config.ts  eslint.config.cjs  next.config.ts  package.json  tsconfig.json
main/src/: global.css.ts  theme.css.ts
main/src/app/: globals.css  layout.tsx  page.css.ts  page.tsx
main/src/app/[roomId]/: layout.tsx  page.tsx
main/src/app/admin/: layout.tsx  page.css.ts  page.tsx
main/src/components/: BasicButton.tsx  ContentsGridHeader.css.ts  ContentsGridHeader.tsx  FormHeader.tsx  MessageModal.css.ts  MessageModal.tsx  Modal.tsx  RoomHeader.css.ts  RoomHeader.tsx
main/src/components/form/: Form.tsx  FormBottom.tsx  FormContainer.tsx  FormErrorMessage.tsx  FormHidden.tsx  FormInputText.tsx  FormInputTextArea.tsx  FormSelect.tsx  FormSubmitCancel.tsx  ProgressBar.tsx  Text.tsx  TextArea.tsx  form.css.ts  formStyles.ts
main/src/db/: db.ts  schema.ts  seed.ts
main/src/features/admin/: actions.ts  schema.ts  types.ts
main/src/hooks/: useCombinedRefs.ts  usePreventResetForm.ts
main/src/utils/: api.ts  urls.ts
(+58 files in other folders)
