[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
actix-files = "0.6.7"
tokio = { version = "1.47", features = ["full"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "macros",
  "postgres",
  "runtime-tokio",
] }
env_logger = "0.11.8"
anyhow = "1.0.99"
config = "0.15.15"
dotenvy = "0.15.7"
once_cell = "1.21.3"
serde = "1.0"
cuid2 = "0.1.4"
log = "0.4"
sha2 = "0.10.9"
hashing-reader = "0.1.0"
hex = "0.4.3"
write-hasher = { version = "0.1.2", features = ["tokio"] }
image = "0.25.8"
