[package]
name = "backend_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
tokio = { version = "1.44", features = ["full"] }
sqlx = { version = "0.8.5", default-features = false, features = [
  "macros",
  "postgres",
  "runtime-tokio",
] }
env_logger = "0.11.8"
anyhow = "1.0.98"
config = "0.15.11"
dotenvy = "0.15.7"
once_cell = "1.21.3"
serde = "1.0.219"
cuid2 = "0.1.4"
log = "0.4.27"
sha2 = "0.10.8"
hashing-reader = "0.1.0"
hex = "0.4.3"
write-hasher = { version = "0.1.2", features = ["tokio"] }
dhat = "0.3.3"
image = "0.25.6"
actix-files = "0.6.6"
# ez-ffmpeg = { version = "0.4.1", features = ["async"] }
